src/objects/CAC_Subscription_Detail__c.object
<CustomObject>
    <description>Will hold the CAC WebService Subscription Details</description>
    <fields>
        <fullName>Actions__c</fullName>
        <description>Technical use to perform actions against the RDS Database directly in order to update service or suspend it</description>
        <inlineHelpText>Technical use to perform actions against the RDS Database directly in order to update service or suspend it</inlineHelpText>
        <label>Actions</label>
        <picklist>
            <picklistValues>
                <fullName>Recover Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend All the Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspend this Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Subscription, Limit and Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <description>Credit amount applicable on the usage consumed</description>
        <inlineHelpText>Credit amount applicable on the usage consumed</inlineHelpText>
        <label>Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_API_Call_Per_Month__c</fullName>
        <description>Maximum Calls per Month will limit the number of calls performed during the month, the number is managed inside the mysql database</description>
        <inlineHelpText>Maximum Calls per Month will limit the number of calls performed during the month, the counter is managed inside the mysql database</inlineHelpText>
        <label>Max API Call Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <description>Date used in the generation of the service Token, the token is generated every time the date is changed</description>
        <inlineHelpText>Date used in the generation of the service Token, the token is generated every time the date is changed</inlineHelpText>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Specification that will be responsible to generate the JSON response to the customer</description>
        <inlineHelpText>Service Specification that will be responsible to generate the JSON response to the customer</inlineHelpText>
        <label>Service Specification</label>
        <referenceTo>GDP_File_Description__c</referenceTo>
        <relationshipLabel>CAC Subscription Details</relationshipLabel>
        <relationshipName>CAC_Subscription_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Token__c</fullName>
        <description>Service Token used by the IATA customer to identify itself during the mysql validation</description>
        <inlineHelpText>Service Token used by the IATA customer to identify itself during the mysql validation</inlineHelpText>
        <label>Service Token</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Share_Authorized_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Service Authorized Usage shared among the different web service of the same subscription</description>
        <inlineHelpText>Is the Service Authorized Usage shared among the different web service of the same subscription</inlineHelpText>
        <label>Share Authorized Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Group__c</fullName>
        <description>Shared Group is used when the authorized usage is shared</description>
        <formula>IF(Share_Authorized_Usage__c, Subscription__r.Name, &apos;&apos;)</formula>
        <inlineHelpText>Shared Group is used when the authorized usage is shared</inlineHelpText>
        <label>Shared Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Zuora Subscription Lookup Id may be lost during amendment</description>
        <inlineHelpText>The Zuora Subscription</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>CAC Subscription Details</relationshipLabel>
        <relationshipName>CAC_Subscription_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CAC Subscription Detail</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAC Subscription Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>